--- a/caliber/src/main/webapp/static/app/resources/css/app.css
+++ b/caliber/src/main/webapp/static/app/resources/css/app.css
@@ -115,6 +115,10 @@ a {
 	background-color: #F26925;
 	color: white;
 }
+#panelReportDisplay{
+	background-color: #FCB414;
+	color: white;
+}
 
 /************************
 	Manage Batch
