panel login simulation

--- a/caliber/src/main/webapp/static/app/partials/home/panel-home.html
+++ b/caliber/src/main/webapp/static/app/partials/home/panel-home.html
@@ -1,3 +1,13 @@
-<div>
-	PANELS THO
+<div id="home">
+	<!-- Welcome new trainer -->
+	<div class="container">
+		<h1>Welcome to Caliber!</h1>
+		<div>
+			<p>
+				To get started, please visit the <a
+					href="https://github.com/pjw6193/caliber/wiki#user-guide">user
+					guide</a> for an introduction and orientation.
+			</p>
+		</div>
+	<br />
 </div>
