--- a/caliber/src/main/webapp/static/app/partials/panel-report-display.html
+++ b/caliber/src/main/webapp/static/app/partials/panel-report-display.html
@@ -1,162 +1,162 @@
 <div class="container">
 	<div class="row">
-	<div class="col-sm-12 col-md-12 col-lg-12">
-		<div class="row">
-			<div class="panel panel-default">
-				<div class="panel-heading clearfix" role="tab" id="headingOne">
-					Panel Interview Feedback
-					<!-- Buttons for our panel report -->
-					<i ng-click="downloadChartButton($event)"
-						class="clickableIcons glyphicon glyphicon-chevron-left"></i> <i
-						ng-click="downloadChartButton($event)"
-						class="clickableIcons glyphicon glyphicon-chevron-right"></i>
-					<!-- Buttons for our panel report -->
-				</div>
-				<div class="container">
-					<div class="panel-body">
-						<div class="row">
-							<div class="col-sm-6">
-								<div class="row">
-									<div class="col-8 col-sm-6">
-										<strong>Name of the Associate:</strong>
-									</div>
-									<div class="col-4 col-sm-6">
-										<span ng-bind="trainee.firstName +' '+trainee.lastName"></span>
-									</div>
-									<div class="col-8 col-sm-6">
-										<strong>Panelist Name:</strong>
-									</div>
-									<div class="col-4 col-sm-6">
-										<span ng-bind="trainee.panelInterview[idx].panelist.name"></span>
-									</div>
-									<div class="col-8 col-sm-6">
-										<strong>Training Track:</strong>
-									</div>
-									<div class="col-4 col-sm-6">
-										<span ng-bind="trainee.track"></span>
-									</div>
-									<div class="col-8 col-sm-6">
-										<strong> Panel Round:</strong>
-									</div>
-									<div class="col-4 col-sm-6">
-										<span ng-bind="trainee.panelInterview[idx].panelRound"></span>
-									</div>
-									<div class="col-8 col-sm-6">
-										<strong>Recording Consent:</strong>
-									</div>
-									<div class="col-4 col-sm-6">
-										<span ng-bind="trainee.panelInterview[idx].consent"></span>
-									</div>
-									<div class="col-8 col-sm-6">
-										<strong>Recording Link:</strong>
-									</div>
-									<div class="col-4 col-sm-6">
-										<span ng-bind="trainee.panelInterview[idx].link"></span>
-									</div>
-								</div>
-							</div>
+		<div class="col-sm-12 col-md-12 col-lg-12">
+			<div class="row">
+				<div class="panel panel-default">
+					<div class="panel-heading clearfix" role="tab" id="headingOne">
+						Panel Interview Feedback
+						<!-- Buttons for our panel report -->
+						<i ng-click="downloadChartButton($event)"
+							class="clickableIcons glyphicon glyphicon-chevron-left"></i> <i
+							ng-click="downloadChartButton($event)"
+							class="clickableIcons glyphicon glyphicon-chevron-right"></i>
+						<!-- Buttons for our panel report -->
+					</div>
+					<div class="container">
+						<div class="panel-body">
 							<div class="row">
 								<div class="col-sm-6">
 									<div class="row">
 										<div class="col-8 col-sm-6">
-											<strong>Interview Date:</strong>
+											<strong>Name of the Associate:</strong>
 										</div>
 										<div class="col-4 col-sm-6">
-											<span ng-bind="trainee.panelInterview[idx].interviewDate"></span>
+											<span ng-bind="traineePanelData[panelIndex].trainee.name"></span>
 										</div>
 										<div class="col-8 col-sm-6">
-											<strong>Interview Time:</strong>
+											<strong>Panelist Name:</strong>
 										</div>
 										<div class="col-4 col-sm-6">
-											<span ng-bind="trainee.panelInterview[idx].interviewTime"></span>
+											<span ng-bind="traineePanelData[panelIndex].panelist.name"></span>
+										</div>
+										<!-- 									<div class="col-8 col-sm-6"> -->
+										<!-- 										<strong>Training Track:</strong> -->
+										<!-- 									</div> -->
+										<!-- 									<div class="col-4 col-sm-6"> -->
+										<!-- 										<span ng-bind="traineePanelData[panelIndex].trainee.track"></span> -->
+										<!-- 									</div> -->
+										<div class="col-8 col-sm-6">
+											<strong> Panel Round:</strong>
+										</div>
+										<div class="col-4 col-sm-6">
+											<span ng-bind="traineePanelData[panelIndex].panelRound"></span>
 										</div>
 										<div class="col-8 col-sm-6">
-											<strong>Interview Duration:</strong>
+											<strong>Recording Consent:</strong>
 										</div>
 										<div class="col-4 col-sm-6">
-											<span ng-bind="trainee.panelInterview[idx].interviewTime"></span>
+											<span ng-bind="traineePanelData[panelIndex].recordingConsent"></span>
 										</div>
 										<div class="col-8 col-sm-6">
-											<strong>Interview Mode:</strong>
+											<strong>Recording Link:</strong>
 										</div>
 										<div class="col-4 col-sm-6">
-											<span ng-bind="trainee.panelInterview[idx].interviewMode"></span>
+											<span ng-bind="traineePanelData[panelIndex].recordingLink"></span>
 										</div>
-										<div class="col-8 col-sm-6">
-											<strong>Overall Feedback:</strong>
-										</div>
-										<div class="col-4 col-sm-6">
-											<span ng-bind="trainee.panelInterview[idx].overallFeedback"></span>
-										</div>
-										<div class="col-8 col-sm-6">
-											<strong>Internet Connectivity:</strong>
-										</div>
-										<div class="col-4 col-sm-6">
-											<span
-												ng-bind="trainee.panelInterview[idx].internetConnectivity"></span>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm-6">
+										<div class="row">
+											<div class="col-8 col-sm-6">
+												<strong>Interview Date:</strong>
+											</div>
+											<div class="col-4 col-sm-6">
+												<span ng-bind="traineePanelData[panelIndex].interviewDate"></span>
+											</div>
+											<!-- 										<div class="col-8 col-sm-6"> -->
+											<!-- 											<strong>Interview Time:</strong> -->
+											<!-- 										</div> -->
+											<!-- 										<div class="col-4 col-sm-6"> -->
+											<!-- 											<span ng-bind="traineePanelData[panelIndex].interviewTime"></span> -->
+											<!-- 										</div> -->
+											<div class="col-8 col-sm-6">
+												<strong>Interview Duration:</strong>
+											</div>
+											<div class="col-4 col-sm-6">
+												<span ng-bind="traineePanelData[panelIndex].duration"></span>
+											</div>
+											<div class="col-8 col-sm-6">
+												<strong>Interview Format:</strong>
+											</div>
+											<div class="col-4 col-sm-6">
+												<span ng-bind="traineePanelData[panelIndex].format"></span>
+											</div>
+											<div class="col-8 col-sm-6">
+												<strong>Overall Feedback:</strong>
+											</div>
+											<div class="col-4 col-sm-6">
+												<span ng-bind="traineePanelData[panelIndex].overall"></span>
+											</div>
+											<div class="col-8 col-sm-6">
+												<strong>Internet Connectivity:</strong>
+											</div>
+											<div class="col-4 col-sm-6">
+												<span ng-bind="traineePanelData[panelIndex].internet"></span>
+											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div id="panelReportDisplay" class="panel-heading">Technical
-						Feedback</div>
-					<div class="panel-body">
-						<table id="feedback" class="table table-responsive">
-							<tr>
-								<th>Technology</th>
-								<th>Result</th>
-								<th>Repanel</th>
-								<th>Comment</th>
-							</tr>
-							<tr ng-repeat="item in trainee.panelInterview[idx].feedback">
-								<td ng-bind="item.technology"></td>
-								<td ng-bind="item.result"></td>
-								<td ng-bind="item.repanel"></td>
-								<td ng-bind="item.comment"></td>
-							</tr>
+						<div id="panelReportDisplay" class="panel-heading">Technical
+							Feedback</div>
+						<table id="feedback" class="table table-responsive removeSpaces">
+							<thead>
+								<tr>
+									<th>Technology</th>
+									<th>Result</th>
+									<th>Status</th>
+									<th>Comment</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr ng-repeat="item in traineePanelData[panelIndex].feedback">
+									<td ng-bind="item.technology.skillCategory"></td>
+									<td ng-bind="item.result"></td>
+									<td ng-bind="item.status"></td>
+									<td ng-bind="item.comment"></td>
+								</tr>
+							</tbody>
 						</table>
-					</div>
 
-					<div id="panelReportDisplay" class="panel-heading">General
-						Feedback</div>
-					<div class="panel-body">
-						<table id="feedback" class="table table-responsive">
+						<div id="panelReportDisplay" class="panel-heading">General
+							Feedback</div>
+						<table id="feedback" class="table table-responsive removeSpaces">
 							<tr>
 								<th>Criteria</th>
 								<th>Comment</th>
 							</tr>
 							<tr>
 								<td><b>Associate Introduction</b></td>
-								<td ng-bind="trainee.panelInterview[idx].comments.comment"></td>
+								<td ng-bind="traineePanelData[panelIndex].associateIntro"></td>
 							</tr>
 							<tr>
 								<td><b>Project 1 Explanation</b></td>
-								<td ng-bind="trainee.panelInterview[idx].comments.project1"></td>
+								<td ng-bind="traineePanelData[panelIndex].projectOneDescription"></td>
 							</tr>
 							<tr>
 								<td><b>Project 2 Explanation</b></td>
-								<td ng-bind="trainee.panelInterview[idx].comments.project2"></td>
+								<td ng-bind="traineePanelData[panelIndex].projectTwoDescription"></td>
 							</tr>
 							<tr>
 								<td><b>Project 3 Explanation</b></td>
-								<td ng-bind="trainee.panelInterview[idx].comments.project3"></td>
+								<td
+									ng-bind="traineePanelData[panelIndex].projectThreeDescription"></td>
 							</tr>
 							<tr>
 								<td><b>Communication Skills</b></td>
-								<td ng-bind="trainee.panelInterview[idx].comments.communication"></td>
+								<td ng-bind="traineePanelData[panelIndex].communicationSkills"></td>
 							</tr>
 							<tr>
 								<td><b>Overall</b></td>
-								<td ng-bind="trainee.panelInterview[idx].comments.overall"></td>
+								<td ng-bind="traineePanelData[panelIndex].overall"></td>
 							</tr>
 						</table>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 	</div>
 </div>
 
