--- a/caliber/src/main/webapp/static/app/partials/panel-report-display.html
+++ b/caliber/src/main/webapp/static/app/partials/panel-report-display.html
@@ -7,9 +7,9 @@
 						Panel Interview Feedback
 						<!-- Buttons for our panel report -->
 						<i ng-click="downloadChartButton($event)"
-							class="clickableIcons glyphicon glyphicon-chevron-left"></i> <i
+							class="clickableIcons glyphicon glyphicon-chevron-right pull-right"></i><span>Round</span><i
 							ng-click="downloadChartButton($event)"
-							class="clickableIcons glyphicon glyphicon-chevron-right"></i>
+							class="clickableIcons glyphicon glyphicon-chevron-left pull-right"></i>
 						<!-- Buttons for our panel report -->
 					</div>
 					<div class="container">
@@ -114,7 +114,10 @@
 								<tr ng-repeat="item in traineePanelData[panelIndex].feedback">
 									<td ng-bind="item.technology.skillCategory"></td>
 									<td ng-bind="item.result"></td>
-									<td ng-bind="item.status"></td>
+									<td>
+									<span ng-if ="item.status == 'Pass'" class ="glyphicon glyphicon-ok"></span>
+									<span ng-if ="item.status == 'Repanel'" class ="glyphicon glyphicon-remove"></span>
+									</td>
 									<td ng-bind="item.comment"></td>
 								</tr>
 							</tbody>
@@ -123,35 +126,41 @@
 						<div id="panelReportDisplay" class="panel-heading">General
 							Feedback</div>
 						<table id="feedback" class="table table-responsive removeSpaces">
-							<tr>
-								<th>Criteria</th>
-								<th>Comment</th>
-							</tr>
-							<tr>
-								<td><b>Associate Introduction</b></td>
-								<td ng-bind="traineePanelData[panelIndex].associateIntro"></td>
-							</tr>
-							<tr>
-								<td><b>Project 1 Explanation</b></td>
-								<td ng-bind="traineePanelData[panelIndex].projectOneDescription"></td>
-							</tr>
-							<tr>
-								<td><b>Project 2 Explanation</b></td>
-								<td ng-bind="traineePanelData[panelIndex].projectTwoDescription"></td>
-							</tr>
-							<tr>
-								<td><b>Project 3 Explanation</b></td>
-								<td
-									ng-bind="traineePanelData[panelIndex].projectThreeDescription"></td>
-							</tr>
-							<tr>
-								<td><b>Communication Skills</b></td>
-								<td ng-bind="traineePanelData[panelIndex].communicationSkills"></td>
-							</tr>
-							<tr>
-								<td><b>Overall</b></td>
-								<td ng-bind="traineePanelData[panelIndex].overall"></td>
-							</tr>
+							<thead>
+								<tr>
+									<th>Criteria</th>
+									<th>Comment</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td><b>Associate Introduction</b></td>
+									<td ng-bind="traineePanelData[panelIndex].associateIntro"></td>
+								</tr>
+								<tr>
+									<td><b>Project 1 Explanation</b></td>
+									<td
+										ng-bind="traineePanelData[panelIndex].projectOneDescription"></td>
+								</tr>
+								<tr>
+									<td><b>Project 2 Explanation</b></td>
+									<td
+										ng-bind="traineePanelData[panelIndex].projectTwoDescription"></td>
+								</tr>
+								<tr>
+									<td><b>Project 3 Explanation</b></td>
+									<td
+										ng-bind="traineePanelData[panelIndex].projectThreeDescription"></td>
+								</tr>
+								<tr>
+									<td><b>Communication Skills</b></td>
+									<td ng-bind="traineePanelData[panelIndex].communicationSkills"></td>
+								</tr>
+								<tr>
+									<td><b>Overall</b></td>
+									<td ng-bind="traineePanelData[panelIndex].overall"></td>
+								</tr>
+							</tbody>
 						</table>
 					</div>
 				</div>
