--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -335,6 +335,9 @@
 											<td ng-if="item.status == 'Repanel'">
 												<span style="color: #ff7575; width: 100%; text-align: center;" class="glyphicon glyphicon-remove fa-2x"></span>
 											</td>
+											<td ng-if="!item.status">
+												<span style="color: rgb(252,221,115); width: 100%; text-align: center;" class="fa fa-minus fa-2x"></span>
+											</td>
 											<td class="col-sm-3 col-md-3 col-lg-3"  ng-bind="item.topics"></td>
 										</tr>
 									</table>
