--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -325,7 +325,7 @@
 										<tr>
 											<th>Trainee Name</th>
 											<th style="text-align: center;">Panel Status</th>
-											<th>Repeat Topics</th>
+											<th style="text-align: center;">Repeat Topics</th>
 										</tr>
 										<tr ng-repeat="item in allTraineesPanelData">
 											<td class="col-sm-4 col-md-4 col-lg-4" ng-bind="item.trainee"></td>
@@ -338,7 +338,10 @@
 											<td ng-if="!item.status">
 												<span style="color: rgb(252,221,115); width: 100%; text-align: center;" class="fa fa-minus fa-2x"></span>
 											</td>
-											<td class="col-sm-3 col-md-3 col-lg-3"  ng-bind="item.topics"></td>
+											<td style = "text-align: center;" class="col-sm-3 col-md-3 col-lg-3"  ng-if="item.topics" ng-bind="item.topics"></td>
+											<td class="col-sm-3 col-md-3 col-lg-3"  ng-if="!item.topics">
+												<span style="color: rgb(252,221,115); width: 100%; text-align: center;" class="fa fa-minus fa-2x"></span>
+											</td>
 										</tr>
 									</table>
 								</div>
