more setup for panel role

--- a/caliber/src/main/webapp/static/app/partials/abstracts/panel.html
+++ b/caliber/src/main/webapp/static/app/partials/abstracts/panel.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
 	<div class="container-fluid header-styles">
 		<ul class="nav navbar-nav">
-			<li><a ui-sref="qc.home"> <img class="img-responsive"
+			<li><a ui-sref="panel.home"> <img class="img-responsive"
 					src="/static/app/resources/images/rev-logo.jpg" alt="revature"
 					height="175" width="175" />
 			</a></li>
